<resources>
    <string name="app_name">Events</string>
    <string name="button_register">Registruj se</string>
    <string name="button_login">Uloguj se</string>
    <string name="button_logout">Log out</string>
    <string name="text_intro_1">Online karte za sve što poželiš!</string>
    <string name="text_intro_2">Whether you enjoy city breaks or extended holidays in the sun, you can always improve your travel experiences by staying in a small.</string>
    <string name="text">Text</string>
    <string name="hint_email">Email</string>
    <string name="password">Lozinka</string>
    <string name="text_or">ili</string>
    <string name="text_forgot_password">Zaboravljena lozinka?</string>
    <string name="reset_password">Send recovery password</string>
    <string name="text_register">Registruj se</string>
    <string name="message_login_error">Bag credentials</string>
    <string name="message_reset_pass">\"Password sent to \"</string>
    <string name="text_name">Ime</string>
    <string name="text_surname">Prezime</string>
    <string name="text_password_confirm">Potrvdite lozinku</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_show_all">Prikazi sve</string>
    <string name="events_top">Najtrazeniji</string>
    <string name="event_concert">Koncerti</string>
    <string name="event_theater">Pozoriste</string>
    <string name="event_sport">Sport</string>
    <string name="event_latest">Najnoviji</string>
    <string name="text_menu_search">Pretraga</string>
    <string name="message_search_validation">Unesite najmanje 3 karaktera!</string>
    <string name="text_result">rezultata</string>
    <string name="text_concert">KONCERT</string>
    <string name="text_read_more">Procitaj vise</string>
    <string name="text_menu_home">Naslovna</string>
    <string name="text_menu_map">Mapa</string>
    <string name="text_menu_favourites">Sacuvano</string>
    <string name="text_menu_profile">Profil</string>
    <string name="text_saved">Saved to favourites!</string>
    <string name="text_remove_event">Remove from favourites?</string>
    <string name="text_map">Mapa</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="location">Location</string>
    <string name="event_setings">Menage events</string>
    <string name="account_settings">Account settings</string>
    <string name="support">Support</string>
    <string name="help_centre">Help centre</string>
    <string name="terms">Terms and Conditions</string>
    <string name="update">Save changes</string>
    <string name="storage_permission">Storage permission is required.</string>
    <string name="my_account">My account</string>
</resources>