<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="@dimen/margin_big">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleIv"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_person"
                app:civ_circle_background_color="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/circleIv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/circleIv"
                app:layout_constraintTop_toTopOf="@id/circleIv">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ime prezime"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_big"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="email adresa"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_small"
                    android:layout_marginTop="@dimen/margin_smallest"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/text_size_biggest"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_biggest"/>

        <LinearLayout
            android:id="@+id/llNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_big"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:textColor="@color/white"
                android:text="@string/notifications"
                android:textSize="@dimen/text_size_normal"/>

            <Switch
                android:id="@+id/sw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

<!--            <ImageView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:src="@drawable/ic_arrow_right"/>-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_normal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/location"
                android:textSize="@dimen/text_size_normal"
                android:gravity="left"/>

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/red"
                android:text="@string/location"
                android:textSize="@dimen/text_size_normal"
                android:gravity="right"
                android:layout_marginEnd="@dimen/margin_small"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/eventSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_normal"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:textColor="@color/white"
                android:text="@string/event_setings"
                android:textSize="@dimen/text_size_normal"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/accountSettingsLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_normal"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:textColor="@color/white"
                android:text="@string/account_settings"
                android:textSize="@dimen/text_size_normal"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:textSize="@dimen/text_size_biggest"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_biggest"/>

        <LinearLayout
            android:id="@+id/helpll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_normal"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:textColor="@color/white"
                android:text="@string/help_centre"
                android:textSize="@dimen/text_size_normal"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/termsll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_normal"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:textColor="@color/white"
                android:text="@string/terms"
                android:textSize="@dimen/text_size_normal"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right"/>

        </LinearLayout>

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_transparent_white"
            android:text="@string/button_logout"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_big"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/margin_biggest"
            android:layout_marginBottom="@dimen/margin_big"/>

    </LinearLayout>

</ScrollView>